--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">pag1</a></li>
-            <li><a href="pag2.html">pag2</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <img src="https://s4.anilist.co/file/anilistcdn/user/avatar/large/b5291036-aOSXEBI7kCiU.png" alt="Beherit" id="beherit">
+            <ul>
+                <li><a href="index.html">SOBRE</a></li>
+                <li id="pag2"><a href="pag2.html">PERSONAGENS</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
-
         <img src="img/titulo.png" alt="titulo" id="titulo">
         <hr>
-
         <div id="introducao">
             <h2>S i n o p s e</h2>
         </div>
@@ -27,10 +28,9 @@
         <p class="justificado">Berserk (ベルセルク Beruseruku) é uma série de mangá escrita e ilustrada por Kentaro Miura. Situado em um mundo de fantasia sombria inspirado na Europa medieval, a história gira em torno de Guts, um solitário mercenário, e Griffith, o líder de um bando de mercenários chamado de "Bando do Falcão".</p>
                    
             <div id="video-intro">
-
                 <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/ocQ6PDiP014" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-
+        <hr>
         <div id="autor">
             <a href="https://pt.wikipedia.org/wiki/Kentaro_Miura#:~:text=Kentar%C5%8D%20Miura%20(%E4%B8%89%E6%B5%A6%20%E5%BB%BA%E5%A4%AA%E9%83%8E%2C%20Miura%20Kentar%C5%8D)%20(Chiba,morte%20de%20Miura%2C%20em%202021." target="_blank"><h2 id="autor-titulo">K e n t a r ō - M i u r a</h2></a>
         </div>
