--- a/pag2.html
+++ b/pag2.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">pag1</a></li>
-            <li><a href="pag2.html">pag2</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <img src="https://s4.anilist.co/file/anilistcdn/user/avatar/large/b5291036-aOSXEBI7kCiU.png" alt="Beherit" id="beherit">
+            <ul>
+                <li><a href="index.html">SOBRE</a></li>
+                <li id="pag2"><a href="pag2.html">PERSONAGENS</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
 </body>
 </html>
