--- a/pag2.html
+++ b/pag2.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Berserk</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pag2.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <img src="https://s4.anilist.co/file/anilistcdn/user/avatar/large/b5291036-aOSXEBI7kCiU.png" alt="Beherit" id="beherit">
+
             <ul>
                 <li><a href="index.html">SOBRE</a></li>
                 <li id="pag2"><a href="pag2.html">PERSONAGENS</a></li>
@@ -19,27 +21,43 @@
         </nav>
     </header>
     <main>
-        <img src="img/titulo.png" alt="titulo" id="titulo">
+        <img src="img/titulo2.png" alt="titulo" class="titulo">
         <hr>
-        <h2 id="protagonistas-titulo">P r o t a g o n i s t a s</h2>
-        <div id="introducao">
-        <img src="img/protagonistas.jpg" alt="protagonistas" id="protagonistas-imagem">
-        <h2 id="guts-titulo">G U T S</h2>
+        
+        <h2 id="protagonistas-titulo">
+            P r o t a g o n i s t a s
+        </h2>
+
+        <img src="img/protagonistas.png" alt="protagonistas" id="protagonistas-imagem">
+        <hr>
+
+        <h2 id="guts-titulo">
+            G U T S
+        </h2>
         
         <p class="justificado">
             Guts (ガッツ Gattsu?) é o personagem principal de Berserk. Ele era o antigo líder da unidade de ataque de um grupo de mercenários conhecido como Bando do Falcão.
         </p>
+
         <p class="justificado">
             Guts é atacado por um grupo de mercenários do Bando do Falcão, liderados por Corkus. Durante o ataque mal-sucedido, Guts mata Dante e corta o braço de Eal. Corkus então manda outro mercenário, Riggel, atacar, mas ele questiona por que deveria ir. Guts se prepara para atacar Corkus, mas é impedido por Casca, que dispara uma seta em seu braço. Ela diz que havia interferido por ordens de Griffith, e ataca Guts a cavalo com sua espada. Guts remove a seta e se defende, derrubando-a da montaria e expondo seu rosto. 
         </p>
+
         <img src="img/guts.webp" alt="guts" id="guts-imagem">
         <p class="justificado">
             <p class="justificado">
                 A batalha continua, e Casca logo é derrotada. Guts é impedido de mata-la por uma lança arremessada a seus pés por Griffith. Os dois começam a lutar após Griffith pedir se Guts se renderia, e o estilo de esgrima refinado que o líder do bando utiliza o surpreende. Griffith acerta uma estocada entre o ombro esquerdo e o peito de Guts, que cai no chão após tentar um novo ataque. Depois de ver o rosto de Griffith, Guts desmaia. 
             </p>
+
             <p class="justificado">
                 Guts começa a recordar a consciência pela manhã, notando que uma mulher havia dormido a seu lado, e acorda no acampamento do Bando do Falcão. Ele reconhece Casca como quem havia dormido a seu lado, e ela acerta um soco no ferimento coberto de Guts, dizendo que ele deveria ter morrido nas mãos de Griffith. Griffith havia ordenado que ela permanecesse ao lado de Guts durante a noite, já que ele havia perdido muito sangue.
             </p>
+
+            <hr>
+
+            <h2 id="griffith-titulo">
+                G R I F F I T H
+            </h2>
     </main>
 </body>
 </html>
