--- a/pag2.html
+++ b/pag2.html
@@ -16,7 +16,7 @@
 
             <ul>
                 <li><a href="index.html">SOBRE</a></li>
-                <li id="pag2"><a href="pag2.html">PERSONAGENS</a></li>
+                <li id="pag2"><a href="#">PERSONAGENS</a></li>
             </ul>
         </nav>
     </header>
