--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <ul>
                 <li>
-                    <a href="index.html">SOBRE</a>
+                    <a href="#">SOBRE</a>
                 </li>
                 <li id="pag2">
                     <a href="pag2.html">PERSONAGENS</a>
@@ -79,8 +79,6 @@
                 <li>Gigantomachia (2013-2014)</li>
                 <li>Duranki (2019-2021)</li>
             </ul>
-            <p class="justificado">&nbsp</p>
-            <p class="justificado">&nbsp</p>
         </div>
     </main>
 </body>
