--- a/pag2.html
+++ b/pag2.html
@@ -23,12 +23,18 @@
     <main>
         <img src="img/titulo2.png" alt="titulo" class="titulo">
         <hr>
-        
-        <h2 id="protagonistas-titulo">
-            P r o t a g o n i s t a s
-        </h2>
 
-        <img src="img/protagonistas.png" alt="protagonistas" id="protagonistas-imagem">
+        <div class="video-intro">  
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/8MlYBcRr-dU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+        <h2 id="personagens-titulo">
+            P e r s o n a g e n s
+        </h2>
+        <br>
+        <h3 style="text-align: center;">- P r i n c i p a i s -</h3>
+
+        <img src="img/personagens.png" alt="personagens" id="personagens-imagem">
         <hr>
 
         <h2 id="guts-titulo">
@@ -58,6 +64,39 @@
             <h2 id="griffith-titulo">
                 G R I F F I T H
             </h2>
+
+            <p class="justificado">
+                Griffith é o antagonista principal de Berserk. Ele é o fundador e líder dos grupos mercenários Bando do Falcão e o Novo Bando do Falcão, o governador da cidade de Falconia e o quinto membro da Mão de Deus; conhecido como Femt.
+            </p>
+
+            <p class="justificado">
+                Como uma criança de nascimento plebeia, destinado a governar algum dia um reino próprio, recebendo o Behelit vermelho, Griffith criou o Bando do Falcão. A grande chance de Griffith veio pela primeira vez quando ele e seu grupo foram trazidos a serviço de Lorde Gennon, o qual ofereceu remuneração extra para o jovem dormir com ele.
+            </p>
+            <img id="griffith-imagem" src="img/griffith.webp" alt="griffith">
+
+            <p class="justificado">
+                Na época em que Guts e os membros do Bando dos Falcões vieram resgatá-lo, Griffith foi deixado mudo e aleijado, tendo sido torturado por um ano inteiro. Quando Griffith tenta coeter suicídio ao perceber ao que ele foi reduzido a um ser inútil , ele machucou-se e sangrou e ativa o Behelit vermelho para o Eclipse. Onde a Mão de Deus se manifestou para receber Griffith. É dado a Griffith a escolha de renascer como o último da Mão de Deus, sabendo que sua transformação significaria que seus aliados seriam sacrificados aos Apóstolos. Griffith aceita a oferta por causa de seu sonho e, enquanto os Falcões eram mortos, aparece diante dele o Idéia do Mal por trás da Mão de Deus. Ele contou que tudo o que ele passou foi o que levou a esse momento, Griffith então aceitou seu destino de se tornar um rei, criando o seu corpo ideal.
+            </p>
+            <hr>
+            <h2 id="caska-titulo">C a s k a</h2>
+
+            <p class="justificado">
+                Casca (キャスカ, Kyasuka) é a protagonista feminina de Berserk e era a única mulher no Bando do Falcão.
+            </p>
+
+            <p class="justificado">
+                Como uma jovem de origem humilde, Casca considerava dificuldades, tais como fome e sequestro, um fato normal da vida de camponesa. No entanto, depois de ter sido quase estuprada por um nobre, ela escolheu lutar, antes de ser auxiliada por Griffith, o qual ofereceu a ela uma espada para se defender. Matando o nobre ela mesma, Casca passa a seguir Griffith, tornando-se uma guerreira estoica, endurecida, e imensamente leal no processo.
+            </p>
+            
+            <p class="justificado">
+                O comportamento frio de Casca esconde seu próprio passado resultante de sua infância traumática, e os desafios que ela enfrentou por causa do preconceito em relação ao seu sexo. Após a prisão de Griffith, ela passou um ano agindo como a líder do Bando do Falcão na ausência do Falcão e de Guts, o que a deixou ainda mais amargurada com Guts. No entanto, os dois (Guts e Casca), eventualmente, se conciliaram e reconheceram que a relação deles era mais do que apenas a de meros companheiros de luta no campo de batalha, e sim como, praticamente, namorados.
+            </p>
+
+            <img id="caska-imagem" src="img/caska.webp" alt="caska">
+
+            <p class="justificado">
+                Após o Eclipse, a personalidade de Casca é completamente apagada, sua fala e sanidade são roubadas, e quaisquer abordagens feitas por um homem, sendo com intenção sexual ou não, desencadeiam a lembrança da violação sofrida nas mãos do demônio Femto. Quando vários bandidos tentaram estuprá-la, ela freneticamente matou todos eles em resposta, e até mesmo atacou Guts em um ataque de pânico. Casca se mostrou sentir relativamente segura perto de Guts, tendo o reconhecido como um protetor, mas começou a temê-lo após ele a atacar enquanto estava possuído. Ela também parece possuir um forte instinto maternal, como mostrado quando ela tentou proteger o seu filho de Guts enfurecido, o qual não sabia que o filho era seu também.
+            </p>
     </main>
 </body>
 </html>
