--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         <p class="justificado">Berserk (ベルセルク Beruseruku) é uma série de mangá escrita e ilustrada por Kentaro Miura. Situado em um mundo de fantasia sombria inspirado na Europa medieval, a história gira em torno de Guts, um solitário mercenário, e Griffith, o líder de um bando de mercenários chamado de "Bando do Falcão".</p>     
 
-        <div id="video-intro">
-            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/ocQ6PDiP014" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="video-intro">
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/ocQ6PDiP014" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <hr>
