--- a/pag2.html
+++ b/pag2.html
@@ -98,5 +98,22 @@
                 Após o Eclipse, a personalidade de Casca é completamente apagada, sua fala e sanidade são roubadas, e quaisquer abordagens feitas por um homem, sendo com intenção sexual ou não, desencadeiam a lembrança da violação sofrida nas mãos do demônio Femto. Quando vários bandidos tentaram estuprá-la, ela freneticamente matou todos eles em resposta, e até mesmo atacou Guts em um ataque de pânico. Casca se mostrou sentir relativamente segura perto de Guts, tendo o reconhecido como um protetor, mas começou a temê-lo após ele a atacar enquanto estava possuído. Ela também parece possuir um forte instinto maternal, como mostrado quando ela tentou proteger o seu filho de Guts enfurecido, o qual não sabia que o filho era seu também.
             </p>
     </main>
+
+    <footer>
+        <form action="#">
+
+            <textarea name="CAMPO" class="CAMPO" maxlength="20" placeholder="COMENTARIO FEEDBACK"></textarea>
+            
+            <div class="footer-botao">
+                <span class="avisoLimite">20</span>
+                
+                <button class="botaoEnvia" type="submit" onclick="botao()">Clique-me</button>
+            </div>
+
+
+        </form>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
