--- a/index.html
+++ b/index.html
@@ -77,5 +77,22 @@
             </ul>
         </div>
     </main>
+
+    <footer>
+        <form action="#">
+
+            <textarea name="CAMPO" class="CAMPO" maxlength="20" placeholder="COMENTARIO FEEDBACK"></textarea>
+            
+            <div class="footer-botao">
+                <span class="avisoLimite">20</span>
+                
+                <button class="botaoEnvia" type="submit" onclick="botao()">Clique-me</button>
+            </div>
+
+
+        </form>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
